https://www.jfire.org/modules/bugs/view.php?id=863 : forcing rollback on all exceptions
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireIntegrationJBoss@11575 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 			<attribute name="javadoc_location" value="file:/home/tobias/java/jdo_javadoc/apidocs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss.jar" sourcepath="/JBOSS_SRC"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
