* https://www.jfire.org/modules/bugs/view.php?id=562 : cross-datastore-copying works initially now, but fails when doing updates * refactored login-module and cascaded-authentication in order to ensure that restoring the identity works when the transaction is being rolled back or otherwise not active anymore.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseBean@11617 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,8 @@
 	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar" sourcepath="WORKSPACE/NightLabsJDO/src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQuery"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQueryJDO"/>
+	<classpathentry kind="var" path="DATANUCLEUS_CORE" sourcepath="/DATANUCLEUS_SOURCE/platform/core/trunk/src/java"/>
+	<classpathentry kind="var" path="DATANUCLEUS_ENHANCER"/>
+	<classpathentry kind="var" path="ASM"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
