--- a/.classpath
+++ b/.classpath
@@ -7,9 +7,9 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseBean"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
+	<classpathentry kind="var" path="JDO2">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/home/tobias/java/jdo_javadoc/apidocs/"/>
+			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireServerManager"/>
