--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
 	<classpathentry kind="var" path="XERCES" sourcepath="/XERCES_SRC"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jbosssx.jar" sourcepath="/JBOSS_SRC/security/src/main"/>
-	<classpathentry kind="var" path="JBOSS/client/jbossall-client.jar"/>
+	<classpathentry kind="var" path="JBOSS/client/jbossall-client.jar" sourcepath="/JBOSS_SRC"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseClientLib"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQuery"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQueryJDO"/>
