bean edit stuff - not yet working
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@13355 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/JFireWebAdmin/WEB-INF/web.xml
+++ b/JFireWebAdmin/WEB-INF/web.xml
@@ -60,16 +60,20 @@
 		<servlet-name>ServerInitializeServlet</servlet-name>
 		<url-pattern>/serverinitialize</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ServerInitializeServlet</servlet-name>
+		<url-pattern>/serverinitialize/*</url-pattern>
+	</servlet-mapping>
 
 
 
 	<servlet>
-		<servlet-name>CfTestServlet</servlet-name>
-		<servlet-class>org.nightlabs.jfire.web.admin.servlet.CfTestServlet</servlet-class>
+		<servlet-name>BeanEditServlet</servlet-name>
+		<servlet-class>org.nightlabs.jfire.web.admin.servlet.BeanEditServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>CfTestServlet</servlet-name>
-		<url-pattern>/cftest</url-pattern>
+		<servlet-name>BeanEditServlet</servlet-name>
+		<url-pattern>/beanedit</url-pattern>
 	</servlet-mapping>
 
 
