some more bean editing
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@13356 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	</classpathentry>
 	<classpathentry kind="var" path="LOG4J" sourcepath="/LOG4J_SRC"/>
 	<classpathentry kind="var" path="APACHE_COMMONS/commons-beanutils.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
