some more bean edit
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@13369 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -1,3 +1,19 @@
-org.nightlabs.jfire.servermanager.config.DatabaseCf=DatabaseCf
-DatabaseCf.property.parentConfigModule.hidden=true
-#DatabaseCf.property.databaseDriverName_noTx.xxx=
+org.nightlabs.jfire.servermanager.config.ServerCf=Server
+Server.property.parentConfigModule.hidden=true
+
+org.nightlabs.jfire.servermanager.config.ServletSSLCf=ServletSSL
+ServletSSL.property.parentConfigModule.hidden=true
+
+org.nightlabs.jfire.servermanager.config.DatabaseCf=Database
+Database.property.parentConfigModule.hidden=true
+
+org.nightlabs.jfire.servermanager.config.JDOCf=JDO
+JDO.property.parentConfigModule.hidden=true
+
+org.nightlabs.jfire.servermanager.config.SmtpMailServiceCf=Smtp
+Smtp.property.parentConfigModule.hidden=true
+
+#org.nightlabs.jfire.servermanager.config.J2eeCf
+
+org.nightlabs.jfire.servermanager.config.RootOrganisationCf=RootOrganisation
+RootOrganisation.property.parentConfigModule.hidden=true
