--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -1,13 +1,21 @@
-DatabaseCf.property.databaseDriverName_noTx.displayName=Driver Name (No TX)
-DatabaseCf.property.databaseDriverName_noTx.shortDescription=The JDBC driver class name
-DatabaseCf.property.databaseDriverName_localTx.displayName=Driver Name (Local TX)
-DatabaseCf.property.databaseDriverName_xa.displayName=Driver Name (XA)
-DatabaseCf.property.databaseURL.displayName=Database URL
-DatabaseCf.property.databasePrefix.displayName=Database Name Prefix
-DatabaseCf.property.databaseSuffix.displayName=Database Name Suffix
-DatabaseCf.property.databaseUserName.displayName=Database User Name
-DatabaseCf.property.databasePassword.displayName=Database Password
-DatabaseCf.property.databaseAdapter.displayName=Database Adapter
-DatabaseCf.property.datasourceMetadataTypeMapping.displayName=Data Source Meta Data Type Mapping
-DatabaseCf.property.datasourceConfigFile.displayName=Data Source Configuration File
-DatabaseCf.property.datasourceTemplateDSXMLFile.displayName=Data Source Template DS XML File
+Server.displayName=Local Server
+ServletSSL.displayName=Servlet / SSL
+
+Database.displayName=Database Configuration
+Database.property.databaseDriverName_noTx.displayName=Driver Name (No TX)
+Database.property.databaseDriverName_noTx.shortDescription=The JDBC driver class name
+Database.property.databaseDriverName_localTx.displayName=Driver Name (Local TX)
+Database.property.databaseDriverName_xa.displayName=Driver Name (XA)
+Database.property.databaseURL.displayName=Database URL
+Database.property.databasePrefix.displayName=Database Name Prefix
+Database.property.databaseSuffix.displayName=Database Name Suffix
+Database.property.databaseUserName.displayName=Database User Name
+Database.property.databasePassword.displayName=Database Password
+Database.property.databaseAdapter.displayName=Database Adapter
+Database.property.datasourceMetadataTypeMapping.displayName=Data Source Meta Data Type Mapping
+Database.property.datasourceConfigFile.displayName=Data Source Configuration File
+Database.property.datasourceTemplateDSXMLFile.displayName=Data Source Template DS XML File
+
+JDO.displayName=JDO Configuration
+Smtp.displayName=SMTP EMail Configuration
+RootOrganisation.displayName=Root Organisation Configuration
