--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -13,7 +13,5 @@ JDO.property.parentConfigModule.hidden=true
 org.nightlabs.jfire.servermanager.config.SmtpMailServiceCf=Smtp
 Smtp.property.parentConfigModule.hidden=true
 
-#org.nightlabs.jfire.servermanager.config.J2eeCf
-
-org.nightlabs.jfire.servermanager.config.RootOrganisationCf=RootOrganisation
-RootOrganisation.property.parentConfigModule.hidden=true
+org.nightlabs.jfire.web.admin.serverinit.PresetsBean=Presets
+Presets.property.presets.values=derby,mysql,manual
