--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -1,5 +1,25 @@
+Presets.displayName=Configuration Presets
+Presets.property.presets.displayName=Choose configuration presets
+Presets.property.presets.derby.displayName=JBoss Application Server / Derby Database
+Presets.property.presets.mysql.displayName=JBoss Application Server / MySQL Database
+Presets.property.presets.manual.displayName=Manual configuration
+
 Server.displayName=Local Server
-ServletSSL.displayName=Servlet / SSL
+Server.property.serverID.displayName=Server ID
+Server.property.serverName.displayName=Server Name
+Server.property.j2eeServerType.displayName=Server Type
+Server.property.initialContextURL.displayName=Initial Context URL
+Server.property.xxxxx.displayName=Deploy Base Directory
+Server.property.xxxxx.displayName=Server Configurator
+
+# TODO is the assignment correct?
+ServletSSL.displayName=Servlet Container / SSL
+ServletSSL.property.servletBaseURL.displayName=Base servlet path
+ServletSSL.property.servletBaseURLHttps.displayName=Https servlet path
+ServletSSL.property.keystoreURLToImport.displayName=SSL certificate store
+ServletSSL.property.sslServerCertificatePassword.displayName=SSL certificate store password
+ServletSSL.property.sslServerCertificateAlias.displayName=Certificate alias used by the server
+ServletSSL.property.keystorePassword.displayName=Chosen SSL certificate password
 
 Database.displayName=Database Configuration
 Database.property.databaseDriverName_noTx.displayName=Driver Name (No TX)
