initialize bean edit
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@13397 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -1,6 +1,13 @@
 org.nightlabs.jfire.servermanager.config.ServerCf=Server
 Server.property.parentConfigModule.hidden=true
 
+org.nightlabs.jfire.servermanager.config.J2eeCf=JEE
+JEE.property.parentConfigModule.hidden=true
+JEE.property.availableServerConfigurators.hidden=true
+JEE.property.availableServerConfigurators.hidden=true
+JEE.property.availableServerConfigurators.hidden=true
+JEE.property.serverConfiguratorSettings.hidden=true
+
 org.nightlabs.jfire.servermanager.config.ServletSSLCf=ServletSSL
 ServletSSL.property.parentConfigModule.hidden=true
 
@@ -14,4 +21,4 @@ org.nightlabs.jfire.servermanager.config.SmtpMailServiceCf=Smtp
 Smtp.property.parentConfigModule.hidden=true
 
 org.nightlabs.jfire.web.admin.serverinit.PresetsBean=Presets
-Presets.property.presets.values=derby,mysql,manual
+Presets.property.presets.values=jboss_derby,jboss_mysql
