--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -1,16 +1,17 @@
 Presets.displayName=Configuration Presets
 Presets.property.presets.displayName=Choose configuration presets
-Presets.property.presets.derby.displayName=JBoss Application Server / Derby Database
-Presets.property.presets.mysql.displayName=JBoss Application Server / MySQL Database
-Presets.property.presets.manual.displayName=Manual configuration
+Presets.property.presets.jboss_derby.displayName=JBoss Application Server / Derby Database
+Presets.property.presets.jboss_mysql.displayName=JBoss Application Server / MySQL Database
 
-Server.displayName=Local Server
+Server.displayName=Local Server Settings
 Server.property.serverID.displayName=Server ID
 Server.property.serverName.displayName=Server Name
 Server.property.j2eeServerType.displayName=Server Type
 Server.property.initialContextURL.displayName=Initial Context URL
 Server.property.xxxxx.displayName=Deploy Base Directory
 Server.property.xxxxx.displayName=Server Configurator
+
+JEE.displayName=JEE Settings
 
 # TODO is the assignment correct?
 ServletSSL.displayName=Servlet Container / SSL
@@ -37,5 +38,5 @@ Database.property.datasourceConfigFile.displayName=Data Source Configuration Fil
 Database.property.datasourceTemplateDSXMLFile.displayName=Data Source Template DS XML File
 
 JDO.displayName=JDO Configuration
-Smtp.displayName=SMTP EMail Configuration
+Smtp.displayName=SMTP E-Mail Configuration
 RootOrganisation.displayName=Root Organisation Configuration
