--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -1,24 +1,67 @@
+org.nightlabs.jfire.web.admin.serverinit.PresetsBean=Presets
+Presets.property.presets.values=jboss_derby,jboss_mysql
+
 org.nightlabs.jfire.servermanager.config.ServerCf=Server
 Server.property.parentConfigModule.hidden=true
+Server.property.serverID.orderHint=1
+Server.property.serverName.orderHint=2
+Server.property.j2eeServerType.orderHint=3
+Server.property.initialContextURL.orderHint=4
 
 org.nightlabs.jfire.servermanager.config.J2eeCf=JEE
 JEE.property.parentConfigModule.hidden=true
 JEE.property.availableServerConfigurators.hidden=true
-JEE.property.availableServerConfigurators.hidden=true
-JEE.property.availableServerConfigurators.hidden=true
 JEE.property.serverConfiguratorSettings.hidden=true
+JEE.property.j2eeDeployBaseDirectory.orderHint=1
+JEE.property.serverConfigurator.orderHint=2
+JEE.property.initOrganisationOnStartupThreadCount.orderHint=3
 
 org.nightlabs.jfire.servermanager.config.ServletSSLCf=ServletSSL
 ServletSSL.property.parentConfigModule.hidden=true
+ServletSSL.property.servletBaseURL.orderHint=1
+ServletSSL.property.servletBaseURLHttps.orderHint=2
+ServletSSL.property.keystoreURLToImport.orderHint=3
+ServletSSL.property.keystorePassword.orderHint=4
+ServletSSL.property.sslServerCertificateAlias.orderHint=5
+ServletSSL.property.sslServerCertificatePassword.orderHint=6
 
 org.nightlabs.jfire.servermanager.config.DatabaseCf=Database
 Database.property.parentConfigModule.hidden=true
+Database.property.databaseDriverName_noTx.orderHint=1
+Database.property.databaseDriverName_localTx.orderHint=2
+Database.property.databaseDriverName_xa.orderHint=3
+Database.property.databaseURL.orderHint=4
+Database.property.databasePrefix.orderHint=5
+Database.property.databaseSuffix.orderHint=6
+Database.property.databaseUserName.orderHint=7
+Database.property.databasePassword.orderHint=8
+Database.property.databaseAdapter.orderHint=9
+Database.property.datasourceMetadataTypeMapping.orderHint=10
+Database.property.datasourceConfigFile.orderHint=11
+Database.property.datasourceTemplateDSXMLFile.orderHint=12
 
 org.nightlabs.jfire.servermanager.config.JDOCf=JDO
 JDO.property.parentConfigModule.hidden=true
+JDO.property.jdoDeploymentDirectory.orderHint=1
+JDO.property.jdoDeploymentDescriptorFile.orderHint=2
+JDO.property.jdoDeploymentDescriptorTemplateFile.orderHint=3
+JDO.property.jdoPersistenceConfigurationFile.orderHint=4
+JDO.property.jdoPersistenceConfigurationTemplateFile.orderHint=5
 
 org.nightlabs.jfire.servermanager.config.SmtpMailServiceCf=Smtp
 Smtp.property.parentConfigModule.hidden=true
+Smtp.property.debug.hidden=true
+Smtp.property.host.orderHint=1
+Smtp.property.port.orderHint=2
+Smtp.property.useAuthentication.orderHint=3
+Smtp.property.username.orderHint=4
+Smtp.property.password.orderHint=5
+Smtp.property.encryptionMethod.orderHint=6
+Smtp.property.mailFrom.orderHint=7
 
-org.nightlabs.jfire.web.admin.serverinit.PresetsBean=Presets
-Presets.property.presets.values=jboss_derby,jboss_mysql
+org.nightlabs.jfire.web.admin.serverinit.FirstOrganisationBean=FirstOrganisation
+FirstOrganisation.property.organisationID.orderHint=1
+FirstOrganisation.property.organisationName.orderHint=2
+FirstOrganisation.property.adminUserName.orderHint=3
+FirstOrganisation.property.adminPassword.orderHint=4
+
