--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -5,13 +5,20 @@ Presets.property.presets.jboss_mysql.displayName=JBoss Application Server / MySQ
 
 Server.displayName=Local Server Settings
 Server.property.serverID.displayName=Server ID
+Server.property.serverID.shortDescription=can not be changed after server initialisation
 Server.property.serverName.displayName=Server Name
 Server.property.j2eeServerType.displayName=Server Type
+Server.property.j2eeServerType.shortDescription=Usually, no change needed
 Server.property.initialContextURL.displayName=Initial Context URL
-Server.property.xxxxx.displayName=Deploy Base Directory
-Server.property.xxxxx.displayName=Server Configurator
+Server.property.initialContextURL.shortDescription=Usually, no change needed
 
 JEE.displayName=JEE Settings
+JEE.property.j2eeDeployBaseDirectory.displayName=Deploy Base Directory
+JEE.property.j2eeDeployBaseDirectory.shortDescription=Usually, no change needed
+JEE.property.serverConfigurator.displayName=Server Configurator
+JEE.property.serverConfigurator.shortDescription=should not be changed after server initialisation
+JEE.property.initOrganisationOnStartupThreadCount.displayName=Parallel startup organisation inits
+JEE.property.initOrganisationOnStartupThreadCount.shortDescription=Usually, no change needed
 
 # TODO is the assignment correct?
 ServletSSL.displayName=Servlet Container / SSL
@@ -38,5 +45,33 @@ Database.property.datasourceConfigFile.displayName=Data Source Configuration Fil
 Database.property.datasourceTemplateDSXMLFile.displayName=Data Source Template DS XML File
 
 JDO.displayName=JDO Configuration
+JDO.property.jdoDeploymentDirectory.displayName=Deployment directory
+JDO.property.jdoDeploymentDescriptorFile.displayName=Deployment descriptor file
+JDO.property.jdoDeploymentDescriptorTemplateFile.displayName=Deployment descriptor template file
+JDO.property.jdoPersistenceConfigurationFile.displayName=Persistence configuration file
+JDO.property.jdoPersistenceConfigurationTemplateFile.displayName=Persistence configuration template file
+
 Smtp.displayName=SMTP E-Mail Configuration
+Smtp.property.host.displayName=Host
+Smtp.property.port.displayName=Port
+Smtp.property.useAuthentication.displayName=Use Authentication
+Smtp.property.username.displayName=Username
+Smtp.property.password.displayName=Password
+Smtp.property.encryptionMethod.displayName=Encryption Method
+Smtp.property.mailFrom.displayName=Sender Address
+
 RootOrganisation.displayName=Root Organisation Configuration
+RootOrganisation.shortDescription=A root-organisation is only necessary, if you plan to setup a network with multiple organisations. For a test-system, it's seldom required. Therefore it's recommended not to change anything here. If the root-organisation's identifier is left empty, a stand-alone-system will be set up. 
+RootOrganisation.property.organisationID.displayName=Organisation Id
+RootOrganisation.property.organisationName.displayName=Organisation Name
+RootOrganisation.property.serverID.displayName=Server Id
+RootOrganisation.property.serverName.displayName=Server Name
+RootOrganisation.property.j2eeServerType.displayName=Server Type
+RootOrganisation.property.initialContextURL.displayName=Initial Context URL
+
+FirstOrganisation.displayName=First Local Organisation
+FirstOrganisation.property.organisationID.displayName=Organisation Id
+FirstOrganisation.property.organisationName.displayName=Organisation Name
+FirstOrganisation.property.adminUserName.displayName=Admin Username
+FirstOrganisation.property.adminPassword.displayName=Admin Password
+
