all seems to work.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireWebAdmin@13422 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/JFireWebAdmin/WEB-INF/web.xml
+++ b/JFireWebAdmin/WEB-INF/web.xml
@@ -50,6 +50,15 @@
 		<url-pattern>/createorganisation</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>ServerConfigServlet</servlet-name>
+		<servlet-class>org.nightlabs.jfire.web.admin.servlet.ServerConfigServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ServerConfigServlet</servlet-name>
+		<url-pattern>/serverconfig</url-pattern>
+	</servlet-mapping>
+
 
 
 	<servlet>
@@ -74,6 +83,10 @@
 	<servlet-mapping>
 		<servlet-name>BeanEditServlet</servlet-name>
 		<url-pattern>/beanedit</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>BeanEditServlet</servlet-name>
+		<url-pattern>/beanedit/*</url-pattern>
 	</servlet-mapping>
 
 
