--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfo.properties
@@ -16,15 +16,6 @@ JEE.property.j2eeDeployBaseDirectory.orderHint=1
 JEE.property.serverConfigurator.orderHint=2
 JEE.property.initOrganisationOnStartupThreadCount.orderHint=3
 
-org.nightlabs.jfire.servermanager.config.ServletSSLCf=ServletSSL
-ServletSSL.property.parentConfigModule.hidden=true
-ServletSSL.property.servletBaseURL.orderHint=1
-ServletSSL.property.servletBaseURLHttps.orderHint=2
-ServletSSL.property.keystoreURLToImport.orderHint=3
-ServletSSL.property.keystorePassword.orderHint=4
-ServletSSL.property.sslServerCertificateAlias.orderHint=5
-ServletSSL.property.sslServerCertificatePassword.orderHint=6
-
 org.nightlabs.jfire.servermanager.config.DatabaseCf=Database
 Database.property.parentConfigModule.hidden=true
 Database.property.databaseDriverName_noTx.orderHint=1
@@ -48,6 +39,15 @@ JDO.property.jdoDeploymentDescriptorTemplateFile.orderHint=3
 JDO.property.jdoPersistenceConfigurationFile.orderHint=4
 JDO.property.jdoPersistenceConfigurationTemplateFile.orderHint=5
 
+org.nightlabs.jfire.servermanager.config.ServletSSLCf=ServletSSL
+ServletSSL.property.parentConfigModule.hidden=true
+ServletSSL.property.servletBaseURL.orderHint=1
+ServletSSL.property.servletBaseURLHttps.orderHint=2
+ServletSSL.property.keystoreURLToImport.orderHint=3
+ServletSSL.property.keystorePassword.orderHint=4
+ServletSSL.property.sslServerCertificateAlias.orderHint=5
+ServletSSL.property.sslServerCertificatePassword.orderHint=6
+
 org.nightlabs.jfire.servermanager.config.SmtpMailServiceCf=Smtp
 Smtp.property.parentConfigModule.hidden=true
 Smtp.property.debug.hidden=true
@@ -58,6 +58,15 @@ Smtp.property.username.orderHint=4
 Smtp.property.password.orderHint=5
 Smtp.property.encryptionMethod.orderHint=6
 Smtp.property.mailFrom.orderHint=7
+
+org.nightlabs.jfire.web.admin.serverinit.RootOrganisationBean=RootOrganisation
+RootOrganisation.property.organisationID.orderHint=1
+RootOrganisation.property.organisationName.orderHint=2
+RootOrganisation.property.serverID.orderHint=3
+RootOrganisation.property.serverName.orderHint=4
+RootOrganisation.property.j2eeServerType.orderHint=5
+RootOrganisation.property.initialContextURL.orderHint=6
+
 
 org.nightlabs.jfire.web.admin.serverinit.FirstOrganisationBean=FirstOrganisation
 FirstOrganisation.property.organisationID.orderHint=1
