--- a/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
+++ b/src/org/nightlabs/jfire/web/admin/beaninfo/beaninfolang.properties
@@ -5,20 +5,57 @@ Presets.property.presets.jboss_mysql.displayName=JBoss Application Server / MySQ
 
 Server.displayName=Local Server Settings
 Server.property.serverID.displayName=Server ID
-Server.property.serverID.shortDescription=can not be changed after server initialisation
+Server.property.serverID.shortDescription=The server identifier -- cannot be changed after server initialisation
 Server.property.serverName.displayName=Server Name
+Server.property.serverName.shortDescription=The server display name
 Server.property.j2eeServerType.displayName=Server Type
-Server.property.j2eeServerType.shortDescription=Usually, no change needed
+Server.property.j2eeServerType.shortDescription=No change needed
 Server.property.initialContextURL.displayName=Initial Context URL
-Server.property.initialContextURL.shortDescription=Usually, no change needed
+Server.property.initialContextURL.shortDescription=No change needed
 
 JEE.displayName=JEE Settings
 JEE.property.j2eeDeployBaseDirectory.displayName=Deploy Base Directory
-JEE.property.j2eeDeployBaseDirectory.shortDescription=Usually, no change needed
+JEE.property.j2eeDeployBaseDirectory.shortDescription=No change needed
 JEE.property.serverConfigurator.displayName=Server Configurator
-JEE.property.serverConfigurator.shortDescription=should not be changed after server initialisation
+JEE.property.serverConfigurator.shortDescription=Should not be changed after server initialisation
 JEE.property.initOrganisationOnStartupThreadCount.displayName=Parallel startup organisation inits
-JEE.property.initOrganisationOnStartupThreadCount.shortDescription=Usually, no change needed
+JEE.property.initOrganisationOnStartupThreadCount.shortDescription=No change needed
+
+Database.displayName=Database Configuration
+Database.property.databaseDriverName_noTx.displayName=Driver Name (No TX)
+Database.property.databaseDriverName_noTx.shortDescription=The JDBC driver class name -- No transactions -- No change needed
+Database.property.databaseDriverName_localTx.displayName=Driver Name (Local TX)
+Database.property.databaseDriverName_localTx.shortDescription=The JDBC driver class name -- Local transactions -- No change needed
+Database.property.databaseDriverName_xa.displayName=Driver Name (XA)
+Database.property.databaseDriverName_xa.shortDescription=The JDBC driver class name -- XA transactions -- No change needed
+Database.property.databaseURL.displayName=Database URL
+Database.property.databaseURL.shortDescription=No change needed
+Database.property.databasePrefix.displayName=Database Name Prefix
+Database.property.databasePrefix.shortDescription=No change needed
+Database.property.databaseSuffix.displayName=Database Name Suffix
+Database.property.databaseSuffix.shortDescription=No change needed
+Database.property.databaseUserName.displayName=Database User Name
+Database.property.databasePassword.displayName=Database Password
+Database.property.databaseAdapter.displayName=Database Adapter
+Database.property.databaseAdapter.shortDescription=No change needed
+Database.property.datasourceMetadataTypeMapping.displayName=Data Source Meta Data Type Mapping
+Database.property.datasourceMetadataTypeMapping.shortDescription=No change needed
+Database.property.datasourceConfigFile.displayName=Data Source Configuration File
+Database.property.datasourceConfigFile.shortDescription=No change needed
+Database.property.datasourceTemplateDSXMLFile.displayName=Data Source Template DS XML File
+Database.property.datasourceTemplateDSXMLFile.shortDescription=No change needed
+
+JDO.displayName=JDO Configuration
+JDO.property.jdoDeploymentDirectory.displayName=Deployment directory
+JDO.property.jdoDeploymentDirectory.shortDescription=No change needed
+JDO.property.jdoDeploymentDescriptorFile.displayName=Deployment descriptor file
+JDO.property.jdoDeploymentDescriptorFile.shortDescription=No change needed
+JDO.property.jdoDeploymentDescriptorTemplateFile.displayName=Deployment descriptor template file
+JDO.property.jdoDeploymentDescriptorTemplateFile.shortDescription=No change needed
+JDO.property.jdoPersistenceConfigurationFile.displayName=Persistence configuration file
+JDO.property.jdoPersistenceConfigurationFile.shortDescription=No change needed
+JDO.property.jdoPersistenceConfigurationTemplateFile.displayName=Persistence configuration template file
+JDO.property.jdoPersistenceConfigurationTemplateFile.shortDescription=No change needed
 
 # TODO is the assignment correct?
 ServletSSL.displayName=Servlet Container / SSL
@@ -28,28 +65,6 @@ ServletSSL.property.keystoreURLToImport.displayName=SSL certificate store
 ServletSSL.property.sslServerCertificatePassword.displayName=SSL certificate store password
 ServletSSL.property.sslServerCertificateAlias.displayName=Certificate alias used by the server
 ServletSSL.property.keystorePassword.displayName=Chosen SSL certificate password
-
-Database.displayName=Database Configuration
-Database.property.databaseDriverName_noTx.displayName=Driver Name (No TX)
-Database.property.databaseDriverName_noTx.shortDescription=The JDBC driver class name
-Database.property.databaseDriverName_localTx.displayName=Driver Name (Local TX)
-Database.property.databaseDriverName_xa.displayName=Driver Name (XA)
-Database.property.databaseURL.displayName=Database URL
-Database.property.databasePrefix.displayName=Database Name Prefix
-Database.property.databaseSuffix.displayName=Database Name Suffix
-Database.property.databaseUserName.displayName=Database User Name
-Database.property.databasePassword.displayName=Database Password
-Database.property.databaseAdapter.displayName=Database Adapter
-Database.property.datasourceMetadataTypeMapping.displayName=Data Source Meta Data Type Mapping
-Database.property.datasourceConfigFile.displayName=Data Source Configuration File
-Database.property.datasourceTemplateDSXMLFile.displayName=Data Source Template DS XML File
-
-JDO.displayName=JDO Configuration
-JDO.property.jdoDeploymentDirectory.displayName=Deployment directory
-JDO.property.jdoDeploymentDescriptorFile.displayName=Deployment descriptor file
-JDO.property.jdoDeploymentDescriptorTemplateFile.displayName=Deployment descriptor template file
-JDO.property.jdoPersistenceConfigurationFile.displayName=Persistence configuration file
-JDO.property.jdoPersistenceConfigurationTemplateFile.displayName=Persistence configuration template file
 
 Smtp.displayName=SMTP E-Mail Configuration
 Smtp.property.host.displayName=Host
@@ -61,8 +76,9 @@ Smtp.property.encryptionMethod.displayName=Encryption Method
 Smtp.property.mailFrom.displayName=Sender Address
 
 RootOrganisation.displayName=Root Organisation Configuration
-RootOrganisation.shortDescription=A root-organisation is only necessary, if you plan to setup a network with multiple organisations. For a test-system, it's seldom required. Therefore it's recommended not to change anything here. If the root-organisation's identifier is left empty, a stand-alone-system will be set up. 
+RootOrganisation.shortDescription=A root-organisation is only necessary, if you plan to setup a network with multiple organisations. For a test-system, it's seldom required. Therefore it's recommended not to change anything here. 
 RootOrganisation.property.organisationID.displayName=Organisation Id
+RootOrganisation.property.organisationID.shortDescription=Keep empty to set-up a stand-alone system
 RootOrganisation.property.organisationName.displayName=Organisation Name
 RootOrganisation.property.serverID.displayName=Server Id
 RootOrganisation.property.serverName.displayName=Server Name
@@ -71,6 +87,7 @@ RootOrganisation.property.initialContextURL.displayName=Initial Context URL
 
 FirstOrganisation.displayName=First Local Organisation
 FirstOrganisation.property.organisationID.displayName=Organisation Id
+FirstOrganisation.property.organisationID.shortDescription=Keep empty to not create an initial organisation
 FirstOrganisation.property.organisationName.displayName=Organisation Name
 FirstOrganisation.property.adminUserName.displayName=Admin Username
 FirstOrganisation.property.adminPassword.displayName=Admin Password
