--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="var" path="ASM"/>
 	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/home/tobias/java/jdo_javadoc/apidocs/"/>
+			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="var" path="DATANUCLEUS_CORE"/>
