--- a/.classpath
+++ b/.classpath
@@ -15,7 +15,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
 	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/home/tobias/java/jdo_javadoc/apidocs/"/>
+			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss.jar" sourcepath="/JBOSS_SRC"/>
