--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,10 @@
 	<classpathentry kind="src" path="/JFireBase"/>
 	<classpathentry kind="src" path="/JFireServerManager"/>
 	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="JPOX_SRC"/>
+	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
+		<attributes>
+			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
