--- a/.classpath
+++ b/.classpath
@@ -2,23 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/JFireBase"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/bcel.jar"/>
-	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
-		<attributes>
-			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="XERCES"/>
-	<classpathentry kind="var" path="XALAN"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JFireRCLBackend"/>
-	<classpathentry kind="var" path="APACHE_COMMONS/commons-beanutils.jar"/>
-	<classpathentry kind="var" path="DATANUCLEUS_CORE"/>
-	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
-	<classpathentry kind="var" path="ASM"/>
+	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.generic.runtimeTarget/JBoss v4.2"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
