--- a/.classpath
+++ b/.classpath
@@ -1,29 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="ejbsrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/JFireBase"/>
-	<classpathentry kind="src" path="/JFireServerManager"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss.jar"/>
-	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JFireBasePublicBean"/>
-	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
-		<attributes>
-			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="JUNIT_HOME/junit.jar" sourcepath="/WORKSPACE/JFireTestSuite/dist/lib/junit-4.3.1-src.jar"/>
-	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JFireLog4j"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsJDO/dist/NightLabsJDO.jar" sourcepath="WORKSPACE/NightLabsJDO/src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQuery"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQueryJDO"/>
-	<classpathentry kind="var" path="DATANUCLEUS_CORE" sourcepath="/DATANUCLEUS_SOURCE/platform/core/trunk/src/java"/>
-	<classpathentry kind="var" path="DATANUCLEUS_ENHANCER"/>
-	<classpathentry kind="var" path="ASM"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.generic.runtimeTarget/JBoss v4.2"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.clientui"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
