--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="lib" path="JFireWebAdmin/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JFireBase"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireServerManager"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseBean"/>
 	<classpathentry kind="var" path="JBOSS/server/default/lib/jsp-api.jar"/>
@@ -15,6 +14,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="var" path="LOG4J" sourcepath="/LOG4J_SRC"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.base"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jfire.base"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
