--- a/.classpath
+++ b/.classpath
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="ejbsrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/JFireBase"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQuery"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsQueryJDO"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.nightlabs.jfire.base"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jdo"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.query"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.query.jdo"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseClientLib"/>
-	<classpathentry kind="var" path="ASM"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
-		<attributes>
-			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="DATANUCLEUS_CORE"/>
-	<classpathentry kind="var" path="DATANUCLEUS_ENHANCER"/>
-	<classpathentry kind="var" path="LOG4J" sourcepath="/LOG4J_SRC"/>
-	<classpathentry kind="var" path="JBOSS/client/jbossall-client.jar" sourcepath="/JBOSS_SRC"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseBean"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsXStream/dist/lib/xpp3-1.1.3.4.jar"/>
-	<classpathentry kind="var" path="WORKSPACE/NightLabsXStream/dist/lib/xstream-1.2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.base"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.generic.runtimeTarget/JBoss v4.2"/>
+	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsXStream"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
