--- a/.classpath
+++ b/.classpath
@@ -1,41 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="ejbsrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireServerManager"/>
-	<classpathentry kind="var" path="JBOSS/bin/run.jar"/>
-	<classpathentry kind="var" path="JBOSS/bin/shutdown.jar"/>
-	<classpathentry kind="var" path="JBOSS/client/jboss-j2ee.jar"/>
-	<classpathentry kind="var" path="JBOSS/lib/concurrent.jar"/>
-	<classpathentry kind="var" path="JBOSS/lib/jboss-system.jar"/>
-	<classpathentry kind="var" path="JBOSS/lib/jboss-jmx.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/bcel.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss.jar" sourcepath="/JBOSS_SRC"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jboss-transaction.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jnpserver.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jpl-pattern.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jpl-util.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/jbosssx.jar" sourcepath="JBOSS_SRC/security/src/main"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JFireBase"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jfire.base"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseBean"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsBase"/>
-	<classpathentry kind="var" path="LOG4J"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NightLabsJDO"/>
-	<classpathentry kind="var" path="JDO2" sourcepath="/JDO2_SRC">
-		<attributes>
-			<attribute name="javadoc_location" value="http://db.apache.org/jdo/api22/apidocs/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jdo"/>
 	<classpathentry kind="lib" path="dist/lib/junit-4.3.1.jar" sourcepath="dist/lib/junit-4.3.1-src.jar"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/mail.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseClientLib"/>
-	<classpathentry kind="var" path="JBOSS/server/default/lib/activation.jar"/>
-	<classpathentry kind="var" path="DATANUCLEUS_CORE"/>
-	<classpathentry kind="var" path="DATANUCLEUS_ENHANCER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireIntegrationJBoss"/>
-	<classpathentry kind="var" path="APACHE_COMMONS/commons-lang.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseDAO"/>
-	<classpathentry kind="var" path="ASM"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.generic.runtimeTarget/JBoss v4.2"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.base"/>
+	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
