--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,13 @@
 	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.generic.runtimeTarget/JBoss v4.2"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireBaseJ2EE"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.base"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.clientui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jdo"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.jfire.base"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.query"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.query.jdo"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JFireRCLBackend"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
