* Refactored the NightLabs-RWLock to be in a separate project: org.nightlabs.concurrent * Refactored the NightLabs-XML-Config to be in a separate project: org.nightlabs.config * New DataNucleus (1.1.3) in client-side (for font-registry). * Fixed a few bugs in the font-registry.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireBaseClientLib@14633 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.nightlabs.eclipse.sdk.jdo.JDO_CONTAINER"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/JFireBaseBean"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.concurrent"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.nightlabs.config"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
